# FreeCraft

./: .gitignore  Cargo.toml  Makefile.toml  index.html
.cargo/: config.toml
src/: block.rs  camera.rs  lib.rs  main.rs  shader.wgsl  texture.rs
